# Meticulo

./: .gitignore  README.md  install.sh  meticulo.sh  pyproject.toml
.github/workflows/: release.yml
meticulo/: __init__.py  __main__.py  cli.py  config.py  hardware.py  model_manager.py  popular_models.json  runner.py  server.py  setup_engine.py
meticulo/sdk/: __init__.py  client.py  types.py
tui/: Cargo.toml  build.sh
tui/src/: api.rs  app.rs  hardware.rs  main.rs  service.rs  ui.rs
