[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meticulo"
version = "0.1.0"
description = "Zero-overhead local LLM runner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Meticulo"}
]
keywords = ["llm", "ai", "local", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
meticulo = "meticulo.cli:main"

[project.urls]
Homepage = "https://github.com/meticulo/meticulo"

[tool.setuptools.packages.find]
include = ["meticulo*"]

[tool.setuptools.package-data]
meticulo = ["popular_models.json"]
