[package]
name = "meticulo-tui"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight TUI for Meticulo - local LLM runner"
license = "MIT"

[dependencies]
# TUI framework - minimal footprint
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

# Async runtime - lightweight
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "process", "signal"] }

# HTTP client for API communication
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info (hardware detection)
sysinfo = "0.32"

# Dirs for config paths
dirs = "6"

# Futures for streaming
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Service management
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
tray-item = "0.10"
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
